--- a/android_tcp_stream_test/res/layout/main.xml
+++ b/android_tcp_stream_test/res/layout/main.xml
@@ -49,6 +49,7 @@
                 android:layout_gravity="left"
                 android:layout_row="1"
                 android:layout_rowSpan="2"
+                android:onClick="stopButtonListener"
                 android:text="@string/stop" />
 
             <Button
