--- a/android_tcp_stream_test/res/layout/main.xml
+++ b/android_tcp_stream_test/res/layout/main.xml
@@ -6,8 +6,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
         android:layout_weight="0.56"
         android:orientation="vertical" >
 
@@ -21,66 +21,70 @@
 
         <GridLayout
             android:id="@+id/gridLayout1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.07"
-            android:columnCount="2" >
+            android:columnCount="3"
+            android:minWidth="480px"
+            android:orientation="horizontal" >
 
             <Button
                 android:id="@+id/upButton"
                 android:layout_column="0"
-                android:layout_columnSpan="2"
-                android:layout_gravity="center_horizontal"
+                android:layout_columnSpan="3"
+                android:layout_gravity="center"
                 android:layout_row="0"
+                android:layout_weight="1.0"
+                            android:minWidth="150px"
+                
                 android:onClick="upButtonListener"
                 android:text="@string/up" />
 
             <Button
                 android:id="@+id/leftButton"
                 android:layout_column="0"
+                android:layout_gravity="left"
                 android:layout_row="1"
-                android:layout_rowSpan="2"
+                android:layout_rowSpan="4"
+                                            android:minWidth="160px"
+                
+                android:layout_weight="1.0"
                 android:onClick="leftButtonListener"
                 android:text="@string/left" />
 
             <Button
                 android:id="@+id/stopButton"
                 android:layout_column="1"
-                android:layout_gravity="left"
-                android:layout_row="1"
-                android:layout_rowSpan="2"
+                android:layout_gravity="center_horizontal"
+                android:layout_row="2"
+                                            android:minWidth="160px"
+                
+                android:layout_weight="1.0"
                 android:onClick="stopButtonListener"
                 android:text="@string/stop" />
 
             <Button
                 android:id="@+id/rightButton"
-                android:layout_column="1"
+                android:layout_column="2"
                 android:layout_gravity="right"
-                android:layout_row="1"
-                android:layout_rowSpan="2"
+                android:layout_row="2"
+                                            android:minWidth="160px"
+                
+                android:layout_weight="1.0"
                 android:onClick="rightButtonListener"
                 android:text="@string/right" />
 
             <Button
                 android:id="@+id/downButton"
-                android:layout_column="1"
-                android:layout_gravity="bottom"
-                android:layout_row="2"
+                android:layout_column="0"
+                android:layout_columnSpan="3"
+                                            android:minWidth="160px"
+                
+                android:layout_gravity="center"
+                android:layout_row="4"
+                android:layout_weight="1.0"
                 android:onClick="downButtonListener"
                 android:text="@string/down" />
 
-            <Space
-                android:layout_width="1dp"
-                android:layout_height="18dp"
-                android:layout_column="0"
-                android:layout_gravity="fill_horizontal"
-                android:layout_row="1" />
-
-            <Space
-                android:layout_width="125dp"
-                android:layout_height="1dp"
-                android:layout_column="0"
-                android:layout_row="0" />
         </GridLayout>
 
         <LinearLayout
@@ -93,16 +97,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="pauseButtonListener"
+                                                            android:minWidth="160px"
+                
                 android:text="@string/pause" />
 
             <Button
                 android:id="@+id/quitButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                                                            android:minWidth="160px"
+                
                 android:onClick="quitButtonListener"
                 android:text="@string/quit" />
             
         </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
